tests/ffi/should_run/T12614_c.c
#include <stdio.h>

void foo(int a, int b, int c, int d, int e, int f, int g, int h) {
       printf("%d, %d, %d, %d, %d, %d, %d, %d\n", a, b, c, d, e, f, g, h);
}
